# ECS-SEHI-Analyzer

./: .dockerignore  .env.template  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  activate_env.sh  create_structure.sh  ecs_sehi_analyzer.py  environment.yml  environment_backup.yml  environment_working.yml  pyproject.toml  pyproject.toml   render.yaml  requirements-local.txt  requirements.txt  run.py  run_app.py  run_app.sh  setup.py  setup_env.sh  streamlit_app.py
.streamlit/: config.toml
deployment/: infra.yaml  quantum-collab-arch.yaml
docs/: api_reference.md
exports/: sehi_analysis_20250201_075044.json
pages/: 01_collaboration.py  02_sandbox_playground.py  __init__.py  advanced_analytics.py  chemical_analysis.py  defect_detection.py  surface_3d.py
scripts/: deploy.sh
src/: README.md  __init__.py  streamlit_app.py
src/core/: execution.py  (+3 more)
tests/: benchmark.py  quantum_validation.py  test_ai.py  test_circuit.py  test_collaboration.py  test_core.py  test_ecs_analysis.py  test_encryption.py  test_entanglement.py  test_error_correction.py  test_finance.py  test_hologram.py  test_hologram_renderer.py  test_interference_calculator.py  test_material_network.py  test_network_trainer.py  test_neural_engine.py  test_neuro_sync.py  test_noise.py  test_optimization.py  test_optimizer.py  test_patent_tracker.py  test_quantum_encryption.py  test_quantum_finance.py  test_sandbox.py  test_sehi_processor.py  test_sensing.py  test_state_prep.py  test_sustainability.py  test_teleportation.py  test_visualizer.py  test_visualizer_4d.py
utils/: gpu_utils.py
(+159 files in other folders)
