[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ecs_sehi_analyzer"
description = "ECS SEHI Analysis Tool with PyTorch Support"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "torchaudio>=2.3.0",
    "numpy>=1.24.3",
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
    "scipy>=1.11.1",
    "scikit-learn>=1.3.0",
    "open3d>=0.17.0",
]

[tool.setuptools]
packages = ["ecs_sehi_analyzer"]
package-dir = {"" = "src"}

[tool.setuptools_scm]
write_to = "src/ecs_sehi_analyzer/_version.py" 